removed linked list and used java linked list